--- a/.travis.yml
+++ b/.travis.yml
@@ -56,3 +56,11 @@ jobs:
         skip_cleanup: true
         on:  # yamllint disable-line rule:truthy
           all_branches: true
+
+    - stage: "deploy-pypi"
+      before_script:
+        - "pip install poetry"
+      script:
+        - "poetry version $TRAVIS_TAG"
+        - "poetry config pypi-token.pypi $PYPI_TOKEN"
+        - "poetry publish --build"
