--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "1.0.0"
+version = "1.0.1"
 description = "A plugin for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <opensource@networktocode.com>"]
 license = "Apache-2.0"
@@ -21,17 +21,17 @@ packages = [
 python = "^3.6"
 napalm = ">=2.5.0, <4"
 zipp = "^3.4.0"
-nautobot = ">=1.0.0b1"
+nautobot = ">=1.0.0b4"
 
 [tool.poetry.dev-dependencies]
-invoke = "*"
-black = "*"
+invoke = "~1.5.0"
+black = "^20.8b1"
+flake8 = "~3.9.1"
 yamllint = "*"
 bandit = "*"
 pylint = "*"
 pylint-django = "*"
 pydocstyle = "*"
-flake8 = "*"
 
 [tool.black]
 line-length = 120
