--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ packages = [
 python = "^3.6"
 napalm = ">=2.5.0, <4"
 zipp = "^3.4.0"
-nautobot = ">=1.0.0b4"
+nautobot = ">=1.0.0"
 
 [tool.poetry.dev-dependencies]
 invoke = "~1.5.0"
@@ -32,6 +32,7 @@ bandit = "*"
 pylint = "*"
 pylint-django = "*"
 pydocstyle = "*"
+django-debug-toolbar = "~3.2.1"
 
 [tool.black]
 line-length = 120
