--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -91,8 +91,8 @@ jobs:
         uses: "./.github/actions/setup-environment"
       - name: "Build Container"
         run: "poetry run invoke build"
-      - name: "Linting: Pylint"
-        run: "poetry run invoke pylint"
+      # - name: "Linting: Pylint"
+      #   run: "poetry run invoke pylint"
     needs:
       - "build"
   unittest:
