--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,8 +87,8 @@ jobs:
     steps:
       - name: "Check out repository code"
         uses: "actions/checkout@v2"
-      - name: "Setup environment"
-        uses: "networktocode/gh-action-setup-poetry-environment@v1"
+      # - name: "Setup environment"
+      #   uses: "networktocode/gh-action-setup-poetry-environment@v1"
       # - name: "Build Container"
       #   run: "poetry run invoke build"
       # - name: "Linting: Pylint"
