--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,25 +18,25 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.6"
+python = "^3.7"
 napalm = ">=2.5.0, <4"
 zipp = "^3.4.0"
 nautobot = ">=1.0.0"
 
 [tool.poetry.dev-dependencies]
-invoke = "~1.5.0"
-black = "^20.8b1"
-flake8 = "~3.9.1"
+invoke = "*"
+black = "*"
+flake8 = "*"
 yamllint = "*"
 bandit = "*"
 pylint = "*"
 pylint-django = "*"
 pydocstyle = "*"
-django-debug-toolbar = "~3.2.1"
+django-debug-toolbar = "*"
 
 [tool.black]
 line-length = 120
-target-version = ['py36']
+target-version = ['py37']
 include = '\.pyi?$'
 exclude = '''
 (
@@ -95,4 +95,3 @@ notes = """,
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
-
