--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,15 @@ pylint = "*"
 pylint-django = "*"
 pydocstyle = "*"
 django-debug-toolbar = "*"
+# Rendering docs to HTML
+mkdocs = "1.3.1"
+# Material for MkDocs theme
+mkdocs-material = "8.4.2"
+# Render custom markdown for version added/changed/remove notes
+mkdocs-version-annotations = "1.0.0"
+# Automatic documentation from sources, for MkDocs
+mkdocstrings = "0.19"
+mkdocstrings-python = "0.7.1"
 
 [tool.black]
 line-length = 120
