Fix mysql not working in github actions.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -127,13 +127,12 @@ jobs:
           - python-version: "3.10"
             db-backend: "postgresql"
             nautobot-version: "1.4.10"
-            # TODO: Include the following, once mysql is working on CI
-            # - python-version: "3.7"
-            #   db-backend: "mysql"
-            #   nautobot-version: "1.5.5"
-            # - python-version: "3.10"
-            #   db-backend: "mysql"
-            #   nautobot-version: "latest"
+          - python-version: "3.7"
+            db-backend: "mysql"
+            nautobot-version: "1.5.5"
+          - python-version: "3.10"
+            db-backend: "mysql"
+            nautobot-version: "latest"
     runs-on: "ubuntu-20.04"
     env:
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_PYTHON_VER: "${{ matrix.python-version }}"
