--- a/invoke.mysql.yml
+++ b/invoke.mysql.yml
@@ -1,9 +1,9 @@
 ---
 nautobot_device_onboarding:
   project_name: "nautobot-device-onboarding"
-  nautobot_ver: "latest"
+  nautobot_ver: "stable"
   local: false
-  python_ver: "3.7"
+  python_ver: "3.8"
   compose_dir: "development"
   compose_files:
     - "docker-compose.base.yml"
