--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ packages = [
 python = "^3.7"
 napalm = ">=2.5.0, <5"
 zipp = "^3.4.0"
-nautobot = ">=1.0.0"
+nautobot = "^1.4.0"
 
 [tool.poetry.dev-dependencies]
 bandit = "*"
