--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -126,12 +126,13 @@ jobs:
           - python-version: "3.10"
             db-backend: "postgresql"
             nautobot-version: "1.4.10"
-          - python-version: "3.7"
-            db-backend: "mysql"
-            nautobot-version: "1.4.10"
-          - python-version: "3.10"
-            db-backend: "mysql"
-            nautobot-version: "stable"
+          # TODO: Enable mysql once https://github.com/nautobot/nautobot-plugin-device-onboarding/pull/80 gets resolved
+          # - python-version: "3.7"
+          #   db-backend: "mysql"
+          #   nautobot-version: "1.4.10"
+          # - python-version: "3.10"
+          #   db-backend: "mysql"
+          #   nautobot-version: "stable"
     runs-on: "ubuntu-20.04"
     env:
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_PYTHON_VER: "${{ matrix.python-version }}"
