recomment db ports

--- a/development/docker-compose.dev.yml
+++ b/development/docker-compose.dev.yml
@@ -30,9 +30,9 @@ services:
       - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
       - "../:/source"
 # To expose postgres or redis to the host uncomment the following
-  db:
-    ports:
-      - "5432:5432"
+#   db:
+#     ports:
+#       - "5432:5432"
 # redis:
 #   ports:
 #     - "6379:6379"
