Ken and Josh VanDeraa work to get network importer logged in

--- a/development/Dockerfile
+++ b/development/Dockerfile
@@ -5,9 +5,8 @@
 # Apps that need to add additional steps or packages can do in the section below.
 # -------------------------------------------------------------------------------------
 # !!! USE CAUTION WHEN MODIFYING LINES BELOW
-
 # Accepts a desired Nautobot version as build argument, default to 1.4.10
-ARG NAUTOBOT_VER="1.4.10"
+ARG NAUTOBOT_VER="1.5.15"
 
 # Accepts a desired Python version as build argument, default to 3.8
 ARG PYTHON_VER="3.8"
@@ -68,11 +67,14 @@ RUN sort poetry_freeze_base.txt poetry_freeze_all.txt | uniq -u > poetry_freeze_
 
 # Install all local project as editable, constrained on Nautobot version, to get any additional
 #   direct dependencies of the app
-RUN pip install -c constraints.txt -e .
+# RUN pip install -c constraints.txt -e .
 
 # Install any dev dependencies frozen from Poetry
 # Can be improved in Poetry 1.2 which allows `poetry install --only dev`
-RUN pip install -c constraints.txt -r poetry_freeze_dev.txt
+# RUN pip install -c constraints.txt -r poetry_freeze_dev.txt
+RUN poetry install
+RUN pip install git+https://github.com/itdependsnetworks/nautobot-plugin-ssot.git@mixins
+
 
 COPY development/nautobot_config.py ${NAUTOBOT_ROOT}/nautobot_config.py
 # !!! USE CAUTION WHEN MODIFYING LINES ABOVE
