--- a/development/docker-compose.dev.yml
+++ b/development/docker-compose.dev.yml
@@ -12,6 +12,7 @@ services:
     volumes:
       - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
       - "../:/source"
+      # - ../../nautobot-plugin-ssot/nautobot_ssot:/usr/local/lib/python3.8/site-packages/nautobot_ssot
   docs:
     entrypoint: "mkdocs serve -v -a 0.0.0.0:8080"
     ports:
@@ -27,6 +28,7 @@ services:
     volumes:
       - "./nautobot_config.py:/opt/nautobot/nautobot_config.py"
       - "../:/source"
+      # - ../../nautobot-plugin-ssot/nautobot_ssot:/usr/local/lib/python3.8/site-packages/nautobot_ssot
   # To expose postgres or redis to the host uncomment the following
   # db:
   #   ports:
