--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,14 +119,14 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.7", "3.8", "3.9", "3.10"]
+        python-version: ["3.8", "3.9", "3.10"]
         db-backend: ["postgresql"]
         nautobot-version: ["stable"]
         include:
           - python-version: "3.10"
             db-backend: "postgresql"
             nautobot-version: "1.4.10"
-          - python-version: "3.7"
+          - python-version: "3.8"
             db-backend: "mysql"
             nautobot-version: "1.5.5"
           - python-version: "3.10"
