--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "1.1.2"
+version = "2.0"
 description = "A plugin for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <opensource@networktocode.com>"]
 license = "Apache-2.0"
@@ -18,10 +18,10 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = ">=3.8,<3.12"
 napalm = ">=2.5.0, <5"
 zipp = "^3.4.0"
-nautobot = "^1.4.0"
+nautobot = "2.0.0-rc.2"
 
 [tool.poetry.dev-dependencies]
 bandit = "*"
@@ -73,7 +73,7 @@ exclude = '''
 
 [tool.pylint.master]
 # Include the pylint_django plugin to avoid spurious warnings about Django patterns
-load-plugins="pylint_django"
+load-plugins="pylint_nautobot, pylint_django"
 ignore=".venv"
 
 [tool.pylint.basic]
@@ -115,3 +115,9 @@ testpaths = [
     "tests"
 ]
 addopts = "-vv --doctest-modules"
+
+[tool.pylint-nautobot]
+supported_nautobot_versions = [
+    "1",
+    "2"
+]
