--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,9 @@ mkdocs-version-annotations = "1.0.0"
 mkdocstrings = "0.19"
 mkdocstrings-python = "0.7.1"
 
+[tool.poetry.group.dev.dependencies]
+pylint-nautobot = "^0.2.0"
+
 [tool.black]
 line-length = 120
 target-version = ['py37']
