--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,8 +45,9 @@ mkdocs-material = "8.4.2"
 # Render custom markdown for version added/changed/remove notes
 mkdocs-version-annotations = "1.0.0"
 # Automatic documentation from sources, for MkDocs
-mkdocstrings = "0.19"
-mkdocstrings-python = "0.7.1"
+mkdocstrings = "0.22.0"
+mkdocstrings-python = "1.1.2"
+griffe = "0.30.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint-nautobot = "^0.2.0"
