update CI for 2.0

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.8"]
-        nautobot-version: ["1.4.10"]
+        nautobot-version: ["2.0.0-rc.3"]
     env:
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_PYTHON_VER: "${{ matrix.python-version }}"
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_NAUTOBOT_VER: "${{ matrix.nautobot-version }}"
@@ -119,19 +119,9 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        python-version: ["3.8", "3.9", "3.10"]
+        python-version: ["3.10"]
         db-backend: ["postgresql"]
-        nautobot-version: ["stable"]
-        include:
-          - python-version: "3.10"
-            db-backend: "postgresql"
-            nautobot-version: "1.4.10"
-          - python-version: "3.8"
-            db-backend: "mysql"
-            nautobot-version: "1.5.5"
-          - python-version: "3.10"
-            db-backend: "mysql"
-            nautobot-version: "latest"
+        nautobot-version: ["2.0.0-rc.3"]
 
     runs-on: "ubuntu-20.04"
     env:
