--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ packages = [
 python = ">=3.8,<3.12"
 napalm = ">=2.5.0, <5"
 zipp = "^3.4.0"
-nautobot = "2.0.0-rc.2"
+nautobot = ">=2.0.0rc1,<2.0.0rc99"
 
 [tool.poetry.dev-dependencies]
 bandit = "*"
