--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,7 +88,10 @@ no-docstring-rgx="^(_|test_|Meta$)"
 # Line length is enforced by Black, so pylint doesn't need to check it.
 # Pylint and Black disagree about how to format multi-line arrays; Black wins.
 disable = """,
-    line-too-long
+    line-too-long,
+    duplicate-code,
+    too-many-lines,
+    too-many-ancestors,
     """
 
 [tool.pylint.miscellaneous]
