--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
       fail-fast: true
       matrix:
         python-version: ["3.10"]
-        nautobot-version: ["2.0.0-rc.4"]
+        nautobot-version: ["2.0.0"]
     env:
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_PYTHON_VER: "${{ matrix.python-version }}"
       INVOKE_NAUTOBOT_DEVICE_ONBOARDING_NAUTOBOT_VER: "${{ matrix.nautobot-version }}"
@@ -121,7 +121,7 @@ jobs:
       matrix:
         python-version: ["3.10"]
         db-backend: ["postgresql"]
-        nautobot-version: ["2.0.0-rc.4"]
+        nautobot-version: ["2.0.0"]
 
     runs-on: "ubuntu-20.04"
     env:
