--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "0.1.0"
-description = "Device Onboarding"
+version = "2.0.2"
+description = "A plugin for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
 readme = "README.md"
@@ -27,7 +27,8 @@ packages = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-# Used for local development
+napalm = ">=2.5.0, <5"
+zipp = "^3.4.0"
 nautobot = "^2.0.0"
 
 [tool.poetry.group.dev.dependencies]
@@ -37,7 +38,6 @@ coverage = "*"
 django-debug-toolbar = "*"
 flake8 = "*"
 invoke = "*"
-ipython = "*"
 pydocstyle = "*"
 pylint = "*"
 pylint-django = "*"
@@ -91,7 +91,10 @@ no-docstring-rgx="^(_|test_|Meta$)"
 # Line length is enforced by Black, so pylint doesn't need to check it.
 # Pylint and Black disagree about how to format multi-line arrays; Black wins.
 disable = """,
-    line-too-long
+    line-too-long,
+    duplicate-code,
+    too-many-lines,
+    too-many-ancestors,
     """
 
 [tool.pylint.miscellaneous]
