--- a/development/development.env
+++ b/development/development.env
@@ -36,3 +36,5 @@ POSTGRES_DB=${NAUTOBOT_DB_NAME}
 MYSQL_USER=${NAUTOBOT_DB_USER}
 MYSQL_DATABASE=${NAUTOBOT_DB_NAME}
 MYSQL_ROOT_HOST=%
+
+NAUTOBOT_SSOT_HIDE_EXAMPLE_JOBS="True"
