--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,9 @@ packages = [
 python = ">=3.8,<3.12"
 napalm = ">=2.5.0, <5"
 zipp = "^3.4.0"
-nautobot = "^2.0.3"
+nautobot = "^2.1.1"
+nautobot-ssot = "^2.1.0"
+
 
 [tool.poetry.group.dev.dependencies]
 bandit = "*"
