Network ssot integration (#149)
* update ssot integration

* update ssot integration

* update ssot integration

* add command getter job

* update lock

* initial cleanup of new job and nornir structures

* create new logger, processor, and process results for return data

* processor update

* update ssot models and adapters

* updated formatter

* update ssot integration

* update ssot integration

* update ssot integration

* update ssot integration

* wip

* update ssot integration

* updated formatting

* updated formatting

* update ssot integration

* update ssot integration

* updated args

* black, isort, pydocstyle

* black and flake 8, some form description updates

* update nautobot version in ci.yml

* pylint

* flake8 and isort

---------

Co-authored-by: David Cates <david.cates@networktocode.com>
Co-authored-by: Jeff Kala <jeff.l.kala@gmail.com>
Co-authored-by: Susan Hooks <susan.hooks@networktocode.com>
Co-authored-by: Susan Hooks <susanhooks@gmail.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,10 @@ packages = [
 python = ">=3.8,<3.12"
 napalm = ">=2.5.0, <5"
 zipp = "^3.4.0"
-nautobot = "^2.0.3"
+nautobot = "^2.1.1"
+nautobot-ssot = "^2.2.0"
+nautobot-plugin-nornir = "2.0.0"
+
 
 [tool.poetry.group.dev.dependencies]
 bandit = "*"
