--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ include = [
 
 [tool.poetry.dependencies]
 python = ">=3.8,<3.12"
-# Used for local development
+napalm = ">=2.5.0, <5"
+zipp = "^3.4.0"
 nautobot = "^2.0.3"
 
 [tool.poetry.group.dev.dependencies]
