update toml file

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ zipp = "^3.4.0"
 nautobot = "^2.1.1"
 nautobot-ssot = "^2.2.0"
 nautobot-plugin-nornir = "2.0.0"
+ntc-templates = "4.2.0"
 
 
 [tool.poetry.group.dev.dependencies]
