Network ssot integration (#154)
* update ssot integration

* update ssot integration

* update ssot integration

* add command getter job

* update lock

* initial cleanup of new job and nornir structures

* create new logger, processor, and process results for return data

* processor update

* update ssot models and adapters

* updated formatter

* update ssot integration

* update ssot integration

* update ssot integration

* update ssot integration

* wip

* update ssot integration

* updated formatting

* updated formatting

* update ssot integration

* update ssot integration

* updated args

* black, isort, pydocstyle

* black and flake 8, some form description updates

* update nautobot version in ci.yml

* pylint

* flake8 and isort

* fix autodetect failing when two ips provided

* fix autodetect failing when two ips provided

* added juniper support

* adding NI

* bump version

* black, isort, pydocstyle

* black, flake8, pydocstyle

* pylint

* update ssot network importer

* update network importer ssot

* update network importer

* update command getter

* fix filtering on NI job

* add vlan model and adapter load method

* add vlans and interface lag to sync

* updates for NI

* updated formatting, added trunked vlans

* add call to command getter

* update command getter call

* handle failed result

* update formatting

* formatting

* black

* simplify if statment

* formatting

* please help

* fix result dict on fail

* cleanup

* update logging and bump version

* remove logging

* update lock file

* black

* flake8

* formatting

---------

Co-authored-by: David Cates <david.cates@networktocode.com>
Co-authored-by: Jeff Kala <jeff.l.kala@gmail.com>
Co-authored-by: Susan Hooks <susan.hooks@networktocode.com>
Co-authored-by: Susan Hooks <susanhooks@gmail.com>
Co-authored-by: Susan Hooks <51679702+susanhooks@users.norepl

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "3.0.2a1"
+version = "3.0.2a2"
 description = "A app for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
@@ -95,10 +95,20 @@ no-docstring-rgx="^(_|test_|Meta$)"
 # Line length is enforced by Black, so pylint doesn't need to check it.
 # Pylint and Black disagree about how to format multi-line arrays; Black wins.
 disable = """,
+    arguments-differ,
     line-too-long,
     duplicate-code,
-    too-many-lines,
+    logging-fstring-interpolation,
+    too-few-public-methods,
     too-many-ancestors,
+    too-many-arguments,
+    too-many-branches,
+    too-many-lines,
+    too-many-locals,
+    too-many-public-methods,
+    too-many-statements,
+    unused-argument,
+    unused-import,
     """
 
 [tool.pylint.miscellaneous]
