--- a/nautobot_device_onboarding/command_mappers/arista_eos.yml
+++ b/nautobot_device_onboarding/command_mappers/arista_eos.yml
@@ -1,17 +1,18 @@
 ---
 device_onboarding:
+  use_textfsm: true
   hostname:
     jpath: "[*].hostname"
-    command: "show version"
+    command: "show hostname"
   serial:
     command: "show version"
-    jpath: "[*].serial"
+    jpath: "[*].serial_number"
   device_type:
     command: "show version"
-    jpath: "[*].platform"
+    jpath: "[*].model"
   mgmt_interface:
-    command: "show interface"
-    jpath: "[?ip_address=='{{ host_info }}'].interface"
+    command: "show ip interface brief"
+    jpath: "[?interface=='Management1'].interface"
   mask_length:
-    command: "show interface"
-    jpath: "[?ip_address=='{{ host_info }}'].prefix_length"
+    command: "show ip interface brief"
+    jpath: "[?interface=='Management1'].ip_address"
