--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ nautobot = "^2.1.1"
 nautobot-ssot = "^2.2.0"
 nautobot-plugin-nornir = "2.0.0"
 jdiff = "^0.0.6"
+ntc-templates = "^4.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
