--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -4,6 +4,7 @@ device_onboarding:
   hostname:
     jpath: "[*].hostname"
     command: "show version"
+    post_processor: "{{ obj[0] | upper }}"
   serial:
     command: "show version"
     jpath: "[*].serial[0]"
