--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -12,7 +12,7 @@ device_onboarding:
     jpath: '"software-information"[0]."product-model"[0].data'
   mgmt_interface:
     command: "show interfaces"
-    jpath: ""interface-information"[0]."logical-interface"[0]."address-family"[0]."interface-address"[0]."ifa-local"[0].data
+    jpath: '"interface-information"[0]."logical-interface"[0]."address-family"[0]."interface-address"[0]."ifa-local"[0].data'
   mask_length:
     command: "show interfaces"
     jpath: "[?local=='{{ host_info }}'].destination"
