--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -3,10 +3,10 @@ device_onboarding:
   use_textfsm: false
   hostname:
     command: "show version | display json"
-    jpath: '"software-information"[0]."host-name"[0].data'
+    jpath: "'software-information'[0]."host-name"[0].data"
   serial:
     command: "show version | display json"
-    jpath: "'chassis-inventory"[0].'chassis'[0].'serial-number'[0].data"
+    jpath: "'chassis-inventory'[0].'chassis'[0].'serial-number'[0].data"
   device_type:
     command: "show version | display json"
     jpath: "'software-information'[0].'product-model'[0].data"
