juniper_junos.yml formatting

--- a/nautobot_device_onboarding/command_mappers/juniper_junos.yml
+++ b/nautobot_device_onboarding/command_mappers/juniper_junos.yml
@@ -3,7 +3,7 @@ device_onboarding:
   use_textfsm: false
   hostname:
     command: "show version | display json"
-    jpath: "'software-information'[0]."host-name"[0].data"
+    jpath: "'software-information'[0].'host-name'[0].data"
   serial:
     command: "show version | display json"
     jpath: "'chassis-inventory'[0].'chassis'[0].'serial-number'[0].data"
