--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,13 @@
 [tool.poetry]
 name = "nautobot-device-onboarding"
-version = "3.0.2a2"
+version = "3.0.2a3"
 description = "A app for Nautobot to easily onboard new devices."
 authors = ["Network to Code, LLC <info@networktocode.com>"]
 license = "Apache-2.0"
 readme = "README.md"
 homepage = "https://github.com/nautobot/nautobot-app-device-onboarding"
 repository = "https://github.com/nautobot/nautobot-app-device-onboarding"
-keywords = ["nautobot", "nautobot-plugin", "nautobot-app"]
+keywords = ["nautobot", "nautobot-app", "nautobot-plugin"]
 classifiers = [
     "Intended Audience :: Developers",
     "Development Status :: 5 - Production/Stable",
@@ -17,12 +17,12 @@ classifiers = [
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
 ]
-include = [
-    "LICENSE",
-    "README.md",
-]
 packages = [
     { include = "nautobot_device_onboarding" },
+]
+include = [
+    # Poetry by default will exclude files that are in .gitignore
+    "nautobot_device_onboarding/static/nautobot_device_onboarding/docs/**/*",
 ]
 
 [tool.poetry.dependencies]
@@ -32,7 +32,8 @@ zipp = "^3.4.0"
 nautobot = "^2.1.1"
 nautobot-ssot = "^2.2.0"
 nautobot-plugin-nornir = "2.0.0"
-ntc-templates = "4.2.0"
+jdiff = "^0.0.6"
+ntc-templates = "^4.3.0"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -42,10 +43,11 @@ coverage = "*"
 django-debug-toolbar = "*"
 flake8 = "*"
 invoke = "*"
-pydocstyle = "*"
+ipython = "*"
 pylint = "*"
 pylint-django = "*"
 pylint-nautobot = "*"
+ruff = "*"
 yamllint = "*"
 toml = "*"
 Markdown = "*"
@@ -58,6 +60,11 @@ mkdocs-version-annotations = "1.0.0"
 # Automatic documentation from sources, for MkDocs
 mkdocstrings = "0.22.0"
 mkdocstrings-python = "1.5.2"
+towncrier = "~23.6.0"
+
+[tool.poetry.extras]
+all = [
+]
 
 [tool.black]
 line-length = 120
@@ -120,21 +127,99 @@ notes = """,
 
 [tool.pylint-nautobot]
 supported_nautobot_versions = [
-    "2.0.0"
+    "2.0.3"
 ]
 
-[tool.pydocstyle]
+[tool.ruff]
+line-length = 120
+target-version = "py38"
+
+[tool.ruff.lint]
+select = [
+    "D",  # pydocstyle
+]
+ignore = [
+    # warning: `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible.
+    "D203",  # 1 blank line required before class docstring
+
+    # D212 is enabled by default in google convention, and complains if we have a docstring like:
+    # """
+    # My docstring is on the line after the opening quotes instead of on the same line as them.
+    # """
+    # We've discussed and concluded that we consider this to be a valid style choice.
+    "D212",  # Multi-line docstring summary should start at the first line
+    "D213",  # Multi-line docstring summary should start at the second line
+
+    # Produces a lot of issues in the current codebase.
+    "D401",  # First line of docstring should be in imperative mood
+    "D407",  # Missing dashed underline after section
+    "D416",  # Section name ends in colon
+]
+
+[tool.ruff.lint.pydocstyle]
 convention = "google"
-inherit = false
-match = "(?!__init__).*\\.py"
-match-dir = "(?!tests|migrations|development)[^\\.].*"
-# D212 is enabled by default in google convention, and complains if we have a docstring like:
-# """
-# My docstring is on the line after the opening quotes instead of on the same line as them.
-# """
-# We've discussed and concluded that we consider this to be a valid style choice.
-add_ignore = "D212"
+
+[tool.ruff.per-file-ignores]
+"nautobot_device_onboarding/migrations/*" = [
+    "D",  # pydocstyle
+]
+"nautobot_device_onboarding/tests/*" = [
+    "D",  # pydocstyle
+]
 
 [build-system]
 requires = ["poetry_core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.towncrier]
+package = "nautobot"
+directory = "changes"
+filename = "docs/admin/release_notes/version_X.Y.md"
+template = "development/towncrier_template.j2"
+start_string = "<!-- towncrier release notes start -->"
+issue_format = "[#{issue}](https://github.com/nautobot/nautobot-app-device-onboarding/issues/{issue})"
+
+[[tool.towncrier.type]]
+directory = "security"
+name = "Security"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "added"
+name = "Added"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "changed"
+name = "Changed"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "deprecated"
+name = "Deprecated"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "removed"
+name = "Removed"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "fixed"
+name = "Fixed"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "dependencies"
+name = "Dependencies"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "documentation"
+name = "Documentation"
+showcontent = true
+
+[[tool.towncrier.type]]
+directory = "housekeeping"
+name = "Housekeeping"
+showcontent = true
