--- a/nautobot_device_onboarding/command_mappers/arista_eos.yml
+++ b/nautobot_device_onboarding/command_mappers/arista_eos.yml
@@ -1,19 +1,30 @@
 ---
 device_onboarding:
-  use_textfsm: true
+  use_textfsm: false
   hostname:
-    command: "show hostname"
-    jpath: "[*].hostname"
+    # command: "show hostname"
+    # jpath: "[*].hostname"
+    command: "show hostname | json"
+    jpath: "'hostname'"
   serial:
-    command: "show version"
-    jpath: "[*].serial_number"
+    # command: "show version"
+    # jpath: "[*].serial_number"
+    command: "show version | json"
+    jpath: "'serialNumber'"
   device_type:
-    command: "show version"
-    jpath: "[*].model"
+    # command: "show version"
+    # jpath: "[*].model"
+    command: "show version | json"
+    jpath: "'modelName'"
   mgmt_interface:
-    command: "show ip interface brief"
-    jpath: "[?interface=='Management1'].interface"
+    # command: "show ip interface brief"
+    # jpath: "[?interface=='Management1'].interface"
+    command: "show ip interface brief | json"
+    #jpath: "[?interface=='Management1'].interface"
+    jpath: "[*].[$interface$,link_status,protocol_status,hardware_type,mac_address,ip_address,prefix_length,mtu]"
   mask_length:
+    # command: "show ip interface brief"
+    # jpath: "[?interface=='Management1'].ip_address"
     command: "show ip interface brief"
-    jpath: "[?interface=='Management1'].ip_address"
-    post_processor: "{{ obj[0] | ipaddress_interface('netmask') | netmask_to_cidr }}"
+    jpath: "$interfaces$.*.interfaceAddress[?ipAddr.address=='{{ obj }}']"
+    # post_processor: "{{ obj[0] | ipaddress_interface('netmask') | netmask_to_cidr }}"
