fix mgmt_interface from list to string

--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -14,11 +14,11 @@ device_onboarding:
   mgmt_interface:
     command: "show interfaces"
     jpath: "[?ip_address=='{{ obj }}'].{name: interface, enabled: link_status}"
-    post_processor: "{% for interface in obj %}{% if 'up' in interface['enabled'] %}{{ [interface.name] }}{% endif %}{% endfor %}"
+    post_processor: "{% for interface in obj %}{% if 'up' in interface['enabled'] %}{{ interface.name }}{% endif %}{% endfor %}"
   mask_length:
     command: "show interfaces"
     jpath: "[?ip_address=='{{ obj }}'].prefix_length"
-    post_processor: "{{ obj | unique | list }}"
+    post_processor: "{{ obj | unique | first }}"
 network_importer:
   use_textfsm: true
   serial:
