Network ssot integration (#160)
* add more api documentation

* Apply suggestions from code review

Co-authored-by: Joe Wesch <10467633+joewesch@users.noreply.github.com>

* update ssot integration

* update ssot integration

* update ssot integration

* add command getter job

* update lock

* initial cleanup of new job and nornir structures

* create new logger, processor, and process results for return data

* processor update

* update ssot models and adapters

* updated formatter

* update ssot integration

* update ssot integration

* update ssot integration

* update ssot integration

* wip

* update ssot integration

* updated formatting

* updated formatting

* update ssot integration

* update ssot integration

* updated args

* black, isort, pydocstyle

* black and flake 8, some form description updates

* update nautobot version in ci.yml

* fix: Drift management

* pylint

* flake8 and isort

* fix autodetect failing when two ips provided

* fix autodetect failing when two ips provided

* Cookie updated by NetworkToCode Cookie Drift Manager Tool

Template:

```
{
    "template": "https://github.com/nautobot/cookiecutter-nautobot-app.git",
    "dir": "nautobot-app",
    "ref": "refs/tags/nautobot-app-v2.1.0",
    "path": null
}
```

Cookie:

```
{
    "remote": "https://github.com/nautobot/nautobot-app-device-onboarding.git",
    "path": "/tmp/tmppwc0ifgu/nautobot-app-device-onboarding",
    "repository_path": "/tmp/tmppwc0ifgu/nautobot-app-device-onboarding",
    "dir": "",
    "branch_prefix": "drift-manager",
    "context": {
        "codeowner_github_usernames": "@mzbroch @scetron @glennmatthews @chadell",
        "full_name": "Network to Code, LLC",
        "email": "info@networktocode.com",
        "github_org": "nautobot",
        "app_name": "nautobot_device_onboarding",
        "verbose_name": "Device Onboarding",
        "app_slug": "nautobot-device-onb

--- a/nautobot_device_onboarding/command_mappers/cisco_ios.yml
+++ b/nautobot_device_onboarding/command_mappers/cisco_ios.yml
@@ -13,10 +13,12 @@ device_onboarding:
     jpath: "[*].hardware[0]"
   mgmt_interface:
     command: "show interfaces"
-    jpath: "[?ip_address=='{{ obj }}'].interface"
+    jpath: "[?ip_address=='{{ obj }}'].{name: interface, enabled: link_status}"
+    post_processor: "{% for interface in obj %}{% if 'up' in interface['enabled'] %}{{ interface.name }}{% endif %}{% endfor %}"
   mask_length:
     command: "show interfaces"
     jpath: "[?ip_address=='{{ obj }}'].prefix_length"
+    post_processor: "{{ obj | unique | first }}"
 network_importer:
   use_textfsm: true
   serial:
@@ -24,4 +26,5 @@ network_importer:
     jpath: "[*].serial[0]"
   interfaces:
     command: "show interfaces"
-    jpath: "[*].[$interface$,link_status,protocol_status,hardware_type,mac_address,ip_address,prefix_length,mtu]"
+    jpath: "[*].[$interface$,hardware_type,ip_address,prefix_length,mac_address,mtu,description,link_status,vlan_id,vlan_id_inner,vlan_id_outer]"
+    post_processor: "{{ obj | fix_interfaces | tojson }}"
